# assignments

./: README.md  colors.ps
cosmic-ray/: analysis.py  sim.py  sim_prelude.py  sim_shields.py
movie/: .gitignore  Cargo.toml  loudness.py  loudness_a_weighting  merge.sh
movie/src/: main.rs  util.rs
resas/: analysis.r  get-data.r
